# rtcom-accounts-ui-client

./: Makefile.am  configure.ac  rtcom-accounts-ui-client.pc.in
debian/: changelog  control  librtcom-accounts-ui-client-dev.install  librtcom-accounts-ui-client0.install  rtcom-accounts-ui-client.install
src/: Makefile.am  client.c  client.h
xml/: aui-instance.xml  aui-service.xml
