SUBDIRS = src

MAINTAINERCLEANFILES = Makefile.in configure compile config.guess	\
		       config.h.in config.h.in~ config.sub depcomp	\
		       install-sh ltmain.sh missing aclocal.m4

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = rtcom-accounts-ui-client.pc

xmldir = $(docdir)
xml_DATA = xml/aui-service.xml xml/aui-instance.xml
